syntax = "proto3";

package any;

option go_package = "xgo/tests/pb/pbinvalid";

import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message Any21 {
  google.protobuf.Any field21 = 21 [ (json.field) = { reference: { repeated: { elem: { }; }; }; } ];
}
